--- a/engineering.css
+++ b/engineering.css
@@ -544,3 +544,26 @@ section{
     from { opacity: 0;}
     to {opacity:  1;}
 }
+
+footer{
+    background-color: #2d2933;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(218, 218, 218);
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    padding-left: 4rem;
+}
+
+footer a{
+    text-decoration: none;
+    color: rgb(218, 218, 218);
+}
+
+footer p{
+    margin: .5rem;
+}
+
+footer a:hover{
+    color: #fcc95c;
+}
